--- a/environments/production.yml
+++ b/environments/production.yml
@@ -15,3 +15,6 @@ show_errors: 0
 # cache route resolution for maximum performance
 route_cache: 1
 
+uploads_dir: "/data/clickemaanouwe/uploads"
+username: "clicker"
+password: "clickity"
